--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
-    "jade": "~1.9.1",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
     "jade": "*",
     "mongodb": "*",
-    "mongoskin": "*"
+    "mongoskin": "*",
+    "morgan": "~1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.2.0"
   }
 }
